src/test/ui/issues/issue-32655.stderr
error: cannot find attribute `derive_Clone` in this scope
  --> $DIR/issue-32655.rs:3:11
   |
LL |         #[derive_Clone]
   |           ^^^^^^^^^^^^
...
LL | foo!();
   | ------ in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: cannot find attribute `derive_Clone` in this scope
  --> $DIR/issue-32655.rs:15:7
   |
LL |     #[derive_Clone]
   |       ^^^^^^^^^^^^

error: aborting due to 2 previous errors

